# rhizome-alkahest

./: .edgeignore  .gitignore  CLAUDE.md  LICENSE  README.md  com.ueu.dean.json  edge  install-native-host.sh  install.ps1  install.sh  native-host-wrapper.sh  pyproject.toml  schema.sql
.claude/skills/rhizome/: skill.md
docs/: ueu-dean-extension.html
rhizome_alkahest/: __init__.py  __main__.py  cli.py  cli_helpers.py  cmd_discovery.py  cmd_dream.py  cmd_frames.py  cmd_grammar.py  cmd_inertia.py  cmd_query.py  cmd_recording.py  cmd_stewardship.py  daemon.py  db.py  digest.py  edge.py  embed.py  frame.py  frame_pointer.py  graph.py  mcp_server.py  native_host.py
tests/: test_cli_dispatch.py  test_cli_integration.py  test_edge_lifecycle.py  test_edgeignore.py  test_grammar.py
