[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rhizome-alkahest"
version = "0.1.0"
description = "Edge-first knowledge graph with phase dissolution and positioned observers"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hallie Larsson"}]
dependencies = [
    "psycopg[binary]>=3.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
vector = ["sentence-transformers>=2.2"]

[project.scripts]
rhizome-mcp = "rhizome_alkahest.mcp_server:main"
edge = "rhizome_alkahest.cli:main"

[tool.setuptools.packages.find]
include = ["rhizome_alkahest*"]
